style.css
.row {
  width: 992px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 100px;
}

/* BLOCCO LEZIONI */
#lezioni .row>.left,
#lezioni .row>.right {
  width: 50%;
  float: left;
}

#lezioni .row img {
  /* per centrare orizzontalmente */
  display: block;
  margin-right: auto;
  margin-left: auto;
}

#lezioni {
  text-align: center;
}

/* BLOCCO STEPS */
#steps .row>.left,
#steps .row>.central,
#steps .row>.right {
  float: left;
  width: 33%;
}

#steps {
  text-align: center;
}

/* BLOCCO PERCHE */
#why {
  text-align: center;
}

#why .row>.first,
#why .row>.second,
#why .row>.third {
  width: 100%;
  margin-top: 80px;
}

#why .row img {
  background-color: #428bca;
  border-radius: 50%;
  padding: 30px
}

/* COMMON */
.row::after {
  content: '';
  display: table;
  clear: both;
}

.container.grey {
  background-color: #f9f9f9;
}

img {
  height: 200px;
}

.clear {
  clear: both;
}

/* Start MediaQuery */ 
@media screen and (max-width: 419px) {
  /* Start Container Lezioni */
  #lezioni .row>.left,
  #lezioni .row>.right {
    width: 90%;
    float: none;
    margin-bottom: 20px;
    margin-top: 30px;
    margin: auto;
  }
  #lezioni>.row{
    padding: 20px 0;
  }
  .row, h1, body, h3{
    margin: 0;
  }
  h1 {
    padding: 10px 0 20px 0;
    font-size: 50px;
  }
  /* End Container Lezioni */

  /* Start Container Steps */
  #steps .row>.left,
  #steps .row>.central,
  #steps .row>.right {
    float: none;
    width: 90%;
    margin: auto;
  }
  .container.grey{
    background-color: #fff;
  }
  #steps{
    margin: 20px 0;
  }
  #steps .row img{
    margin-top: 30px;
  }
  /* End Container Steps */

  /* Start Container Why */
  #why>.row, #lezioni>.row{
    background-color: rgb(242, 242, 205);
  }
  #why .row>.first,
  #why .row>.second,
  #why .row>.third {
    width: 90%;
    margin: auto;
    margin-top: 30px;
  }
  hr{
    margin: 0;
    border: 1px solid gray;
  }
  .third{
    padding-bottom: 20px;
  }
  /* End Container Why */
}
  /* End MediaQuery */

  /* Start MediaQuery */ 
@media screen and (min-width: 420px) and (max-width: 1000px) {
  /* Start Container Lezioni */
  #lezioni .row>.left,
  #lezioni .row>.right {
    width: 90%;
    float: none;
    margin-bottom: 20px;
    margin-top: 30px;
    margin: auto;
  }
  #lezioni>.row{
    padding: 20px 0;
  }
  .row, h1, body, h3{
    margin: 0;
  }
  h1 {
    margin: 20px 0 20px 0;
    font-size: 40px;
  }
  /* End Container Lezioni */

  /* Start Container Steps */
  #steps .row{
    background-color: rgb(10, 10, 10);
    padding: 20px 20px;
    color: #fff;
  }
  #steps h3{
    margin: 10px 0;
  }
   /* End Container Steps */

  /* Start Container Why */
  #why .row{
    background-color: #fff;
  }
  #why .row>.first,
  #why .row>.second,
  #why .row>.third {
    width: 90%;
    margin: auto;
    margin-top: 30px;
    background-color: #f9f9f9;
    padding: 20px;
    border-radius: 20px;
    box-shadow: 5px 5px 10px #000;
  }
  #why .row>.third {
    margin-bottom: 20px;
  }
  #why hr{
    display: none;
  }
  #why h3{
    margin: 10px;
  }
    /* End Container Why */
}
    /* End MediaQuery */

